<resources>
    <string name="app_name">DebugRank</string>
    <string name="action_settings">Settings</string>

    <string name="points">%1$d\npoints</string>

    <string name="minutes">%1$d:00\nminutes</string>
    <string name="minute">1:00\nminute</string>

    <string name="bugs">%1$d\nbugs</string>
    <string name="bug">1\nbug</string>

    <string name="out_of_time">Out of Time!</string>
    <string name="ok">ok</string>
    <string name="code">code</string>
    <string name="result">result</string>
    <string name="uploading">compiling...</string>
    <string name="passed_test_cases">%1$d/%2$d test cases</string>

    <string name="test_case_num">Testcase</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="expected_output">Expected Output</string>
    <string name="message">Message</string>
    <string name="compile_error">Compile Error(s)</string>
    <string name="solved">Solved</string>

    <string name="internet_no">No internet</string>
    <string name="internet_error">Unable to connect to the internet</string>

    <string name="showcase_step1_title">Compiling Code</string>
    <string name="showcase_step1_desc">Click the action button to compile code changes</string>

    <string name="showcase_step2_title">Test Case Results</string>
    <string name="showcase_step2_desc">Click test cases tab to view test case results or compile errors</string>

    <string name="showcase_step3_title">Finding Bugs</string>
    <string name="showcase_step3_desc">Click the code tab to view the code.  Double tap a line to edit.</string>
</resources>
