<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/testcase"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Testcase 0"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/passed"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/ic_done_green_24dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/inputLabel"
            style="@style/TestCaseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input"/>

        <TextView
            android:id="@+id/input"
            style="@style/TestCaseLayout.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0\n1"/>

        <TextView
            android:id="@+id/outputLabel"
            style="@style/TestCaseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output"/>

        <TextView
            android:id="@+id/output"
            style="@style/TestCaseLayout.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5"/>

        <TextView
            android:id="@+id/expectedOutputLabel"
            style="@style/TestCaseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expected_output"/>

        <TextView
            android:id="@+id/expectedOutput"
            style="@style/TestCaseLayout.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10"/>

        <TextView
            android:id="@+id/messageLabel"
            style="@style/TestCaseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"/>

        <TextView
            android:id="@+id/message"
            style="@style/TestCaseLayout.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="compile error"/>

    </LinearLayout>

</android.support.v7.widget.CardView>