<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:indeterminateOnly="true"
        android:keepScreenOn="true"
        android:layout_gravity="center"
    />

</merge>