<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.languages.LanguagesActivity">

    <com.grapecity.xuni.flexgrid.FlexGrid
        android:id="@+id/flexgrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flexGrid_autoGenerateColumns="false"
        app:flexGrid_cellPaddingTop="3"
        app:flexGrid_cellPaddingBottom="5"
        app:flexGrid_headersVisibility="NONE"
        app:flexGrid_gridLinesVisibility="NONE"/>

</FrameLayout>
